crates/tachy/src/components/dialogs/snapshots/tachy__components__dialogs__export__tests__export_normal.snap
---
source: crates/tachy/src/components/dialogs/export.rs
expression: render(&f).backend()
---
"                                                                                    "
"  ┌ Export ──────────────────────────────────────────────────────────────────────┐  "
"  │                                                                              │  "
"  │   Path       /data/orders.filtered.csv                                       │  "
"  │ › Delimiter  ,   \t   |   ;                                                  │  "
"  │   Quoting    minimal   all                                                   │  "
"  │   Header     on   off                                                        │  "
"  │   Columns    all   visible                                                   │  "
"  │                                                                              │  "
"  │                                                                              │  "
"  │ 12,345 rows · est. 4.1 MB                                                    │  "
"  │                                                                              │  "
"  │ Enter export · Esc cancel · ←→ change · c custom · ↑↓ field                  │  "
"  └──────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                    "
